Options for effects

--- a/src/main/resources/assets/environs/lang/en_us.json
+++ b/src/main/resources/assets/environs/lang/en_us.json
@@ -8,5 +8,27 @@
 	"environs.cfg.logging.VersionCheck": "Online Version Check Result",
 	"environs.cfg.logging.VersionCheck.tooltip": "Enables/disables display of version check information",
 	"environs.cfg.logging.FlagMask": "Debug Flag Mask",
-	"environs.cfg.logging.FlagMask.tooltip": "Bitmask for toggling various debug traces"
+	"environs.cfg.logging.FlagMask.tooltip": "Bitmask for toggling various debug traces",
+	"environs.cfg.biomes": "Biome Options",
+	"environs.cfg.biomes.tooltip": "Options for controlling biome sound/effects",
+	"environs.cfg.biomes.Sealevel": "Overworld Sealevel Override",
+	"environs.cfg.biomes.Sealevel.tooltip": "Sealevel to set for Overworld (0 use default for World)",
+	"environs.cfg.biomes.DimBlacklist": "Dimension Blacklist",
+	"environs.cfg.biomes.DimBlacklist.tooltip": "Dimension IDs where biome sounds will not be played",
+	"environs.cfg.effects": "Effect Options",
+	"environs.cfg.effects.tooltip": "Options for controlling various effects",
+	"environs.cfg.effects.Steam": "Steam Jets",
+	"environs.cfg.effects.Steam.tooltip": "Enable/disable Steam Jets where lava meets water",
+	"environs.cfg.effects.Fire": "Fire Jets",
+	"environs.cfg.effects.Fire.tooltip": "Enable/disable Fire Jets in lava",
+	"environs.cfg.effects.Bubble": "Bubble Jets",
+	"environs.cfg.effects.Bubble.tooltip": "Enable/disable Bubble Jets under water",
+	"environs.cfg.effects.Dust": "Dust Motes",
+	"environs.cfg.effects.Dust.tooltip": "Enable/disable Dust Motes dropping from under blocks",
+	"environs.cfg.effects.Fountain": "Fountain Jets",
+	"environs.cfg.effects.Fountain.tooltip": "Enable/disable Fountain Jets spraying",
+	"environs.cfg.effects.Fireflies": "Fireflies",
+	"environs.cfg.effects.Fireflies.tooltip": "Enable/disable Firefly effect around plants",
+	"environs.cfg.effects.Splash": "Water Splash",
+	"environs.cfg.effects.Splash.tooltip": "Enable/disable Water Splash effects when water spills down"
 }
