--- a/src/main/resources/assets/environs/lang/ru_ru.json
+++ b/src/main/resources/assets/environs/lang/ru_ru.json
@@ -8,5 +8,22 @@
 	"environs.cfg.logging.VersionCheck": "Проверка новых версий",
 	"environs.cfg.logging.VersionCheck.tooltip": "Вкл/выкл информацию о новых версиях мода",
 	"environs.cfg.logging.FlagMask": "Маска отладки",
-	"environs.cfg.logging.FlagMask.tooltip": "Битовая маска для включения различных отладочных трассировок"
+	"environs.cfg.logging.FlagMask.tooltip": "Битовая маска для включения различных отладочных трассировок",
+	"environs.cfg.effects": "Эффекты",
+	"environs.cfg.effects.tooltip": "Настройки для различных эффектов",
+	"environs.cfg.effects.Steam": "Струйки пара",
+	"environs.cfg.effects.Steam.tooltip": "Вкл/выкл струйки пара в местах, где лава соприкасается с водой",
+	"environs.cfg.effects.Fire": "Струйки огня",
+	"environs.cfg.effects.Fire.tooltip": "Вкл/выкл струйки огня из лавы",
+	"environs.cfg.effects.Bubble": "Струи пузырьков",
+	"environs.cfg.effects.Bubble.tooltip": "Вкл/выкл струи пузырьков под водой",
+	"environs.cfg.effects.Dust": "Пылинки",
+	"environs.cfg.effects.Dust.tooltip": "Вкл/выкл падающие пылинки из-под блоков",
+	"environs.cfg.effects.Fountain": "Струи фонтана",
+	"environs.cfg.effects.Fountain.tooltip": "Вкл/выкл распыляющиеся струи от фонтана",
+	"environs.cfg.effects.Fireflies": "Светлячки",
+	"environs.cfg.effects.Fireflies.tooltip": "Вкл/выкл светлячков, летающих вокруг растений",
+	"environs.cfg.effects.Splash": "Брызги воды",
+	"environs.cfg.effects.Splash.tooltip": "Вкл/выкл брызги от стекающей воды"
+
 }
