--- a/src/main/resources/assets/environs/lang/ru_ru.json
+++ b/src/main/resources/assets/environs/lang/ru_ru.json
@@ -9,6 +9,12 @@
 	"environs.cfg.logging.VersionCheck.tooltip": "Вкл/выкл информацию о новых версиях мода",
 	"environs.cfg.logging.FlagMask": "Маска отладки",
 	"environs.cfg.logging.FlagMask.tooltip": "Битовая маска для включения различных отладочных трассировок",
+	"environs.cfg.biomes": "астройки биомов",
+	"environs.cfg.biomes.tooltip": "Настройки звуков и эффектов в биомах",
+	"environs.cfg.biomes.Sealevel": "Перезапись уровня моря",
+	"environs.cfg.biomes.Sealevel.tooltip": "Установка уровня моря для мира (0 – по умолчанию для мира)",
+	"environs.cfg.biomes.DimBlacklist": "Чёрный список измерений",
+	"environs.cfg.biomes.DimBlacklist.tooltip": "ID измерений, где не будут воспроизвдиться звуки биомов",
 	"environs.cfg.effects": "Эффекты",
 	"environs.cfg.effects.tooltip": "Настройки для различных эффектов",
 	"environs.cfg.effects.Steam": "Струйки пара",
@@ -30,5 +36,27 @@
 	"environs.cfg.aurora.Enable": "Северное сияние",
 	"environs.cfg.aurora.Enable.tooltip": "Вкл/выкл северное сияние на стороне клиента и сервера",
 	"environs.cfg.aurora.MaxBands": "Maximum Bands",
-	"environs.cfg.aurora.MaxBands.tooltip": "Cap the maximum bands that will be rendered"
+	"environs.cfg.aurora.MaxBands.tooltip": "Cap the maximum bands that will be rendered",
+	"environs.cfg.sound": "Sound Options",
+	"environs.cfg.sound.tooltip": "Options for defining sound behavior",
+	"environs.cfg.sound.BiomeVolume": "Biome Sound Volume",
+	"environs.cfg.sound.BiomeVolume.tooltip": "Scaling factor to apply to biome sounds",
+	"environs.cfg.sound.SpotVolume": "Spot Sound Volume",
+	"environs.cfg.sound.SpotVolume.tooltip": "Scaling factor to apply to spot sounds",
+	"environs..cfg.fog": "Туман",
+	"environs..cfg.fog.tooltip": "Настройки различных эффектов тумана в клиенте",
+	"environs..cfg.fog.Enable": "Обработка тумана",
+	"environs..cfg.fog.Enable.tooltip": "Вкл/выкл обработку тумана",
+	"environs..cfg.fog.Morning": "Утренний туман",
+	"environs..cfg.fog.Morning.tooltip": "Включает туман утром, который со времненем рассеется",
+	"environs..cfg.fog.MorningChance": "Вероятность утреннего тумана",
+	"environs..cfg.fog.MorningChance.tooltip": "Величина вероятности утреннего тумана",
+	"environs..cfg.fog.Weather": "Погодный туман",
+	"environs..cfg.fog.Weather.tooltip": "Увеличивает плотность тумана в зависимости от силы дождя",
+	"environs..cfg.fog.Bedrock": "Нижний туман",
+	"environs..cfg.fog.Bedrock.tooltip": "Увеличивает плотность тумана при приближении к коренной породе",
+	"environs..cfg.fog.Haze": "Высотная дымка",
+	"environs..cfg.fog.Haze.tooltip": "Чем выше игрок – тем больше дымка",
+	"environs..cfg.fog.Biome": "Туман биома",
+	"environs..cfg.fog.Biome.tooltip": "Включает туман определённой плотности и цвета для каждого биома"
 }
