--- a/src/main/resources/assets/environs/lang/en_us.json
+++ b/src/main/resources/assets/environs/lang/en_us.json
@@ -36,5 +36,27 @@
 	"environs.cfg.aurora.Enable": "Auroras",
 	"environs.cfg.aurora.Enable.tooltip": "Enable/disable Aurora processing",
 	"environs.cfg.aurora.MaxBands": "Maximum Bands",
-	"environs.cfg.aurora.MaxBands.tooltip": "Cap the maximum bands that will be rendered"
+	"environs.cfg.aurora.MaxBands.tooltip": "Cap the maximum bands that will be rendered",
+	"environs.cfg.sound": "Sound Options",
+	"environs.cfg.sound.tooltip": "Options for defining sound behavior",
+	"environs.cfg.sound.BiomeVolume": "Biome Sound Volume",
+	"environs.cfg.sound.BiomeVolume.tooltip": "Scaling factor to apply to biome sounds",
+	"environs.cfg.sound.SpotVolume": "Spot Sound Volume",
+	"environs.cfg.sound.SpotVolume.tooltip": "Scaling factor to apply to spot sounds",
+	"environs..cfg.fog": "Fog Options",
+	"environs..cfg.fog.tooltip": "Options that control the various fog effects in the client",
+	"environs..cfg.fog.Enable": "Enable Fog Processing",
+	"environs..cfg.fog.Enable.tooltip": "Enable/disable fog processing",
+	"environs..cfg.fog.Morning": "Morning Fog",
+	"environs..cfg.fog.Morning.tooltip": "Show morning fog that eventually burns off",
+	"environs..cfg.fog.MorningChance": "Morning Fog Chance",
+	"environs..cfg.fog.MorningChance.tooltip": "Chance morning fog will occurs expressed as 1 in N",
+	"environs..cfg.fog.Weather": "Weather Fog",
+	"environs..cfg.fog.Weather.tooltip": "Increase fog based on the strength of rain",
+	"environs..cfg.fog.Bedrock": "Bedrock Fog",
+	"environs..cfg.fog.Bedrock.tooltip": "Increase fog at bedrock layers",
+	"environs..cfg.fog.Haze": "Elevation Haze",
+	"environs..cfg.fog.Haze.tooltip": "Higher the player elevation the more haze that is experienced",
+	"environs..cfg.fog.Biome": "Biome Fog",
+	"environs..cfg.fog.Biome.tooltip": "Enable biome specific fog density and color"
 }
