--- a/src/main/resources/assets/environs/lang/ru_ru.json
+++ b/src/main/resources/assets/environs/lang/ru_ru.json
@@ -1,64 +1,64 @@
 {
-	"environs.modname": "Dynamic Surrounding: Environs",
+	"environs.modname": "Dynamic Surrounding: Окружение",
 	"environs.msg.NewVersion": "[\"§6Доступно обновление: §9[\",{\"text\":\"§2%1$s §ev%2$s§f\",\"color\":\"gold\",\"hoverEvent\":{\"action\":\"show_text\",\"value\":{\"text\":\"Нажмите, чтобы открыть страницу мода на CurseForge\",\"color\":\"aqua\"}},\"clickEvent\":{\"action\":\"open_url\",\"value\":\"%3$s\"}},\"§9]\"]",
-	"environs.cfg.logging": "Настройки логирования",
-	"environs.cfg.logging.tooltip": "Определяет как будет вести лог",
-	"environs.cfg.logging.EnableDebug": "Отладка",
-	"environs.cfg.logging.EnableDebug.tooltip": "Вкл/выкл отладочный лог",
+	"environs.cfg.logging": "Ведение журнала ",
+	"environs.cfg.logging.tooltip": "Определяет ведение журнала (log)",
+	"environs.cfg.logging.EnableDebug": "Ведение журнала отладки",
+	"environs.cfg.logging.EnableDebug.tooltip": "Включает/выключает ведение журнала отладки мода",
 	"environs.cfg.logging.VersionCheck": "Проверка новых версий",
 	"environs.cfg.logging.VersionCheck.tooltip": "Вкл/выкл информацию о новых версиях мода",
-	"environs.cfg.logging.FlagMask": "Маска отладки",
-	"environs.cfg.logging.FlagMask.tooltip": "Битовая маска для включения различных отладочных трассировок",
-	"environs.cfg.biomes": "астройки биомов",
-	"environs.cfg.biomes.tooltip": "Настройки звуков и эффектов в биомах",
-	"environs.cfg.biomes.Sealevel": "Перезапись уровня моря",
+	"environs.cfg.logging.FlagMask": "Маска флага отладки",
+	"environs.cfg.logging.FlagMask.tooltip": "Bitmask для перемешивание различных следов отладки",
+	"environs.cfg.biomes": "Биомы",
+	"environs.cfg.biomes.tooltip": "Параметры для управления звуками/эффектами биомов",
+	"environs.cfg.biomes.Sealevel": "Преодоление уровня моря",
 	"environs.cfg.biomes.Sealevel.tooltip": "Установка уровня моря для мира (0 – по умолчанию для мира)",
 	"environs.cfg.biomes.DimBlacklist": "Чёрный список измерений",
 	"environs.cfg.biomes.DimBlacklist.tooltip": "ID измерений, где не будут воспроизвдиться звуки биомов",
 	"environs.cfg.effects": "Эффекты",
-	"environs.cfg.effects.tooltip": "Настройки для различных эффектов",
-	"environs.cfg.effects.Steam": "Струйки пара",
-	"environs.cfg.effects.Steam.tooltip": "Вкл/выкл струйки пара в местах, где лава соприкасается с водой",
-	"environs.cfg.effects.Fire": "Струйки огня",
-	"environs.cfg.effects.Fire.tooltip": "Вкл/выкл струйки огня из лавы",
-	"environs.cfg.effects.Bubble": "Струи пузырьков",
-	"environs.cfg.effects.Bubble.tooltip": "Вкл/выкл струи пузырьков под водой",
+	"environs.cfg.effects.tooltip": "Параметры для управления различными эффектами",
+	"environs.cfg.effects.Steam": "Струи пара",
+	"environs.cfg.effects.Steam.tooltip": "Включение/выключение струй пара в местах соприкасновения лавы с водой",
+	"environs.cfg.effects.Fire": "Струи огня",
+	"environs.cfg.effects.Fire.tooltip": "Включение/выключение струй огня из лавы",
+	"environs.cfg.effects.Bubble": "Струи пузырей",
+	"environs.cfg.effects.Bubble.tooltip": "Включение/выключение струй пузырей под водой",
 	"environs.cfg.effects.Dust": "Пылинки",
-	"environs.cfg.effects.Dust.tooltip": "Вкл/выкл падающие пылинки из-под блоков",
+	"environs.cfg.effects.Dust.tooltip": "Включение/выключение пылинок, падающих из-под блоков",
 	"environs.cfg.effects.Fountain": "Струи фонтана",
-	"environs.cfg.effects.Fountain.tooltip": "Вкл/выкл распыляющиеся струи от фонтана",
+	"environs.cfg.effects.Fountain.tooltip": "Включение/выключение распыления фонтанных струй",
 	"environs.cfg.effects.Fireflies": "Светлячки",
-	"environs.cfg.effects.Fireflies.tooltip": "Вкл/выкл светлячков, летающих вокруг растений",
+	"environs.cfg.effects.Fireflies.tooltip": "Включение/выключение эффекта светлячков, летающих вокруг растений",
 	"environs.cfg.effects.Splash": "Брызги воды",
-	"environs.cfg.effects.Splash.tooltip": "Вкл/выкл брызги от стекающей воды",
-	"environs.cfg.effects.Underwater": "Disable Underwater Particles",
-	"environs.cfg.effects.Underwater.tooltip": "Enable/disable Minecrafts Underwater particle effect",
-	"environs.cfg.aurora": "Северное сияние",
-	"environs.cfg.aurora.tooltip": "Настройки поведения и отрисовки северного сияния",
+	"environs.cfg.effects.Splash.tooltip": "Включение/выключение эффекта всплеска воды, когда вода течёт вниз",
+	"environs.cfg.effects.Underwater": "Подводные частицы",
+	"environs.cfg.effects.Underwater.tooltip": "Включение/выключение эффекта подводных частиц",
+	"environs.cfg.aurora": "Параметры северного сияния",
+	"environs.cfg.aurora.tooltip": "Управление поведением и визуализацией северного сияния",
 	"environs.cfg.aurora.Enable": "Северное сияние",
-	"environs.cfg.aurora.Enable.tooltip": "Вкл/выкл северное сияние на стороне клиента и сервера",
-	"environs.cfg.aurora.MaxBands": "Maximum Bands",
-	"environs.cfg.aurora.MaxBands.tooltip": "Cap the maximum bands that will be rendered",
-	"environs.cfg.sound": "Sound Options",
-	"environs.cfg.sound.tooltip": "Options for defining sound behavior",
-	"environs.cfg.sound.BiomeVolume": "Biome Sound Volume",
-	"environs.cfg.sound.BiomeVolume.tooltip": "Scaling factor to apply to biome sounds",
-	"environs.cfg.sound.SpotVolume": "Spot Sound Volume",
-	"environs.cfg.sound.SpotVolume.tooltip": "Scaling factor to apply to spot sounds",
+	"environs.cfg.aurora.Enable.tooltip": "Включение/выключение обработки северного сияния",
+	"environs.cfg.aurora.MaxBands": "Максимально полос",
+	"environs.cfg.aurora.MaxBands.tooltip": "Ограничение максимальных полос, которые будут визуализированы",
+	"environs.cfg.sound": "Звуки",
+	"environs.cfg.sound.tooltip": "Параметры для определения поведения звука",
+	"environs.cfg.sound.BiomeVolume": "Громкость звука биом",
+	"environs.cfg.sound.BiomeVolume.tooltip": "Коэффициент масштабирования для применения к звукам биома",
+	"environs.cfg.sound.SpotVolume": "Громкость точечного звука",
+	"environs.cfg.sound.SpotVolume.tooltip": "Коэффициент масштабирования для применения к точечным звукам",
 	"environs..cfg.fog": "Туман",
-	"environs..cfg.fog.tooltip": "Настройки различных эффектов тумана в клиенте",
+	"environs..cfg.fog.tooltip": "Параметры, управляющие различными эффектами тумана в клиенте",
 	"environs..cfg.fog.Enable": "Обработка тумана",
-	"environs..cfg.fog.Enable.tooltip": "Вкл/выкл обработку тумана",
+	"environs..cfg.fog.Enable.tooltip": "Включение/выключение обработки тумана",
 	"environs..cfg.fog.Morning": "Утренний туман",
-	"environs..cfg.fog.Morning.tooltip": "Включает туман утром, который со времненем рассеется",
-	"environs..cfg.fog.MorningChance": "Вероятность утреннего тумана",
-	"environs..cfg.fog.MorningChance.tooltip": "Величина вероятности утреннего тумана",
+	"environs..cfg.fog.Morning.tooltip": "Включение утреннего тумана, который со времненем рассеивается",
+	"environs..cfg.fog.MorningChance": "Шанс утреннего тумана",
+	"environs..cfg.fog.MorningChance.tooltip": "Шанс утреннего тумана будет выражаться как 1 в N",
 	"environs..cfg.fog.Weather": "Погодный туман",
-	"environs..cfg.fog.Weather.tooltip": "Увеличивает плотность тумана в зависимости от силы дождя",
-	"environs..cfg.fog.Bedrock": "Нижний туман",
-	"environs..cfg.fog.Bedrock.tooltip": "Увеличивает плотность тумана при приближении к коренной породе",
-	"environs..cfg.fog.Haze": "Высотная дымка",
-	"environs..cfg.fog.Haze.tooltip": "Чем выше игрок – тем больше дымка",
-	"environs..cfg.fog.Biome": "Туман биома",
-	"environs..cfg.fog.Biome.tooltip": "Включает туман определённой плотности и цвета для каждого биома"
+	"environs..cfg.fog.Weather.tooltip": "Увеличение плотности тумана в зависимости от силы дождя",
+	"environs..cfg.fog.Bedrock": "Туман коренной породы",
+	"environs..cfg.fog.Bedrock.tooltip": "Увеличение плотности тумана на слоях коренной породы",
+	"environs..cfg.fog.Haze": "Дымка возвышения",
+	"environs..cfg.fog.Haze.tooltip": "Чем выше игрок – тем больше дымки",
+	"environs..cfg.fog.Biome": "Туман биом",
+	"environs..cfg.fog.Biome.tooltip": "Включение специфической для биома плотности и цвета тумана"
 }
